--- a/src/app/detail/detail.component.html
+++ b/src/app/detail/detail.component.html
@@ -1,3 +1,20 @@
-<p>
-{{product.name}}
-</p>
+Product- Detail
+<div *ngIf="product" ngClass="col-lg-4 col-md-6 mb-4" >
+    <div class="card h-100">
+        <a href="#"><img class="card-img-top" [src] ="product.img"  alt=""></a>
+        <div class="card-body">
+          <h4 class="card-title">
+            <a href="#">{{product.name}}</a>
+          </h4>
+          <h5>${{product.price}}</h5>
+          <p class="card-text">{{product.desc}}</p>
+          <p class="card-text">{{product.status ?"Còn Hàng":"Hết Hàng"}}</p>
+          
+        </div>
+        <div class="card-footer">
+          
+          
+        </div>
+      </div>
+
+</div>
