--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -16,8 +16,7 @@
           <h5>${{item.price}}</h5>
           <p class="card-text">{{item.desc}}</p>
           <p class="card-text">{{item.status ?"Còn Hàng":"Hết Hàng"}}</p>
-          <button class="btn btn-primary" (click) ="removeItem(item.id)">Xóa</button>
-          <button class="btn btn-primary" (click) ="showDetail(item)">ShowDetail</button>
+          <button class="btn btn-primary" routerLink="/product-list/{{item.id}}">ShowDetail</button>
         </div>
         <div class="card-footer">
           
@@ -26,7 +25,5 @@
       </div>
       
 </div>
-  <div *ngIf="selected">
-    INPUT -> <app-detail [data]= "selected"></app-detail>
-  </div>
+
 </div>
