--- a/src/app/slide/slide.component.html
+++ b/src/app/slide/slide.component.html
@@ -6,13 +6,13 @@
     </ol>
     <div class="carousel-inner" role="listbox">
       <div class="carousel-item active">
-        <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="First slide">
+        <img style=" width : 900px; height : 350px"class="d-block img-fluid" src="https://news.gearvn.com/wp-content/uploads/2020/02/63-635096_gta-5-hd-wallpapers-for-android-gta-5.jpg" alt="First slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="Second slide">
+        <img style=" width : 900px; height : 350px" class="d-block img-fluid" src="https://market2nd.com/wp-content/uploads/2019/12/1920.jpg" alt="Second slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="Third slide">
+        <img style=" width : 900px; height : 350px" class="d-block img-fluid" src="https://img.gta5-mods.com/q95/images/gta-5-gameconfig-300-cars/dea252-casinoheist.jpg" alt="Third slide">
       </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
